data/all_generated_tests/raw_wast_tests/call_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3831.wast
;; 10. **Calling Exported Function on Stack Overflow Condition**:    - **Description**: Call a function exported from another module in a context where the calling module is close to stack overflow, ensuring the function call does not corrupt the stack.    - **Constraint**: Stack overflow conditions must be handled without further corruption.    - **Relation**: Ensures robustness and proper stack state management under edge conditions across boundaries.  These descriptions are tailored to thoroughly test the incorrect handling of control flow across module boundaries, ensuring compliance with the constraints and key points provided.

(assert_invalid
  (module
    (import "env" "external_func" (func $external_func))
    (func $call_external_close_to_overflow
      (local $i i32)
      ;; Simulate almost full stack by creating a large number of local variables
      (loop $loop
        (local.set $i (i32.add (local.get $i) (i32.const 1)))
        (br_if $loop (i32.lt_u (local.get $i) (i32.const 32768)))
      )
      ;; Now call the external function
      (call $external_func)
    )
  )
  "stack overflow"
)